# KnobGalleryPlusPlus

./: README.md  package-lock.json  package.json  start-app.bat
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: data.py  settings.py
backend/core/: config.py  models.py
backend/services/: data_service.py  enhanced_download.py
docs/: _coverpage.md  _sidebar.md  contributing.md  getting-started.md  index.html  roadmap.md
frontend/: package-lock.json  package.json
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.vue
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/components/: KnobGallery.vue  KnobPreview.vue  SettingsMenu.vue  StatusBar.vue  TopBar.vue
